src/components/Group/Group.module.css
.textDescription {
  max-width: 100%;
  margin-top: 8px;
}

.titleRow {
  display: block;
  justify-content: space-between;
  align-items: center;
  box-align: center;
  margin: 24px;
  flex-wrap: wrap;
  box-pack: justify;
}

.groupHeader {
  padding: 1rem;
}

.topLevel {
  display: flex;
  flex-direction: column;
  max-width: 800px;
  min-width: 320px;
  margin-right: 16px;
  margin-left: 16px;
  padding: 10px;
  margin: auto;
  position: relative;
  overflow: hidden;
}

@media (min-width: 600px) {
  .topLevel {
    padding: 1rem;
  }
}

